[package]
name = "enwikt-dump-rs"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = [
  "dump_parser",
  "filter_headers",
  "header_stats",
  "namespaces",
  "template_iter",
  "process-with-lua",
]

[[bin]]
path = "src/main.rs"
name = "wiktionary-data"

[dependencies]
dump_parser = { path = "dump_parser" }
filter_headers = { path = "filter_headers" }
header_stats = { path = "header_stats" }
template_iter = { path = "template_iter" }
wiktionary_namespaces = { path = "namespaces" }
structopt = "0.3"
bzip2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
parse_mediawiki_dump = "0.1.0"
