[package]
name = "dump_parser"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_mediawiki_dump = "0.1.0"
parse_wiki_text = "0.1.5"
