[package]
name = "dump_parser"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_mediawiki_dump = { git = "https://github.com/Erutuon/parse_mediawiki_dump", rev = "3cbbdfd4bc066758c59f8e481a5769952a237f91" }
parse_wiki_text = { version = "0.1.5", path = "../parse_wiki_text" }
wiktionary_namespaces = { path = "../namespaces" }
