[package]
name = "header_stats"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dump_parser = { path = "../dump_parser" }
parse_wiki_text_ext = { path = "../parse_wiki_text_ext" }
serde = { version = "1.0", features = ["derive"] }
