[package]
name = "wiktionary_namespaces"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-primitive-conversions = {path = "../derive-primitive-conversions"}