[package]
name = "lua"
version = "0.1.0"
authors = ["gbertilson <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rlua = "0.16.3"
bzip2 = "0.3.2"
dump_parser = { path = "../dump_parser" }
wiktionary_namespaces = { path = "../namespaces" }
template_iter = { path = "../template_iter" }
getopts = "0.2.21"
string-wrapper = "0.3.0"
unicase = "2.5.1"

[[bin]]
name = "process-with-lua"
path = "src/main.rs"