[package]
name = "template_iter"
version = "0.1.0"
authors = ["Erutuon <5840197+Erutuon@users.noreply.github.com>"]
edition = "2018"

[dependencies]
dump_parser = { path = "../dump_parser" }
serde = { version = "1.0", features = ["derive"] }
parse_mediawiki_dump = "0.1.0"
parse_wiki_text = "0.1.5"
parse_wiki_text_ext = { path = "../parse_wiki_text_ext" }
wiktionary_namespaces = { path = "../namespaces" }
